--- a/music_controller/frontend/static/css/index.css
+++ b/music_controller/frontend/static/css/index.css
@@ -24,3 +24,9 @@ body {
   position: absolute;
   transform: translate(-50%, -50%);
 }
+#gradient {
+  width: 100%;
+  height: 100%;
+  padding: 0px;
+  margin: 0px;
+}
